kubernetes/apps/flux-system/capacitor-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor-dashboard-ingress
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux.home.lorenzolab.com`)
      kind: Rule
      services:
        - name: capacitor
          port: 9000
  tls:
    secretName: home-certificate-secret
